--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "my-elect-app",
-  "version": "1.0.0",
-  "description": "Hello World!",
-  "main": "main.js",
-  "author": "Jane Doe",
-  "license": "MIT",
-  "scripts": {
-    "start": "electron ."
-  },
-  "devDependencies": {
-    "electron": "^16.0.5"
-  }
+    "name": "my-elect-app",
+    "version": "1.0.0",
+    "description": "Hello World!",
+    "main": "main.js",
+    "author": "Jane Doe",
+    "license": "MIT",
+    "scripts": {
+        "start": "electron ."
+    },
+    "devDependencies": {
+        "electron": "^16.0.5"
+    },
+    "dependencies": {
+        "v_database": "^0.0.23",
+        "v_file_system": "^1.0.5"
+    }
 }
