--- a/package.json
+++ b/package.json
@@ -1,18 +1,54 @@
 {
-    "name": "my-elect-app",
+    "name": "v_database_admin",
     "version": "1.0.0",
     "description": "Hello World!",
     "main": "main.js",
     "author": "Jane Doe",
     "license": "MIT",
     "scripts": {
-        "start": "electron ."
+        "dev": "electron .",
+        "start": "electron-forge start",
+        "package": "electron-forge package",
+        "make": "electron-forge make"
     },
     "devDependencies": {
+        "@electron-forge/cli": "^6.0.0-beta.61",
+        "@electron-forge/maker-deb": "^6.0.0-beta.61",
+        "@electron-forge/maker-rpm": "^6.0.0-beta.61",
+        "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+        "@electron-forge/maker-zip": "^6.0.0-beta.61",
         "electron": "^16.0.5"
     },
     "dependencies": {
+        "electron-squirrel-startup": "^1.0.0",
         "v_database": "^0.0.23",
         "v_file_system": "^1.0.5"
+    },
+    "config": {
+        "forge": {
+            "packagerConfig": {},
+            "makers": [
+                {
+                    "name": "@electron-forge/maker-squirrel",
+                    "config": {
+                        "name": "v_database_admin"
+                    }
+                },
+                {
+                    "name": "@electron-forge/maker-zip",
+                    "platforms": [
+                        "darwin"
+                    ]
+                },
+                {
+                    "name": "@electron-forge/maker-deb",
+                    "config": {}
+                },
+                {
+                    "name": "@electron-forge/maker-rpm",
+                    "config": {}
+                }
+            ]
+        }
     }
 }
