--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "v_database_admin",
     "version": "1.0.0",
     "description": "Hello World!",
-    "main": "main.js",
-    "author": "Jane Doe",
+    "main": "app.js",
+    "author": "V-core9",
     "license": "MIT",
     "scripts": {
         "dev": "electron .",
